--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-emojione": "^5.0.1",
     "react-icons": "^3.8.0",
     "react-scripts": "3.3.0",
     "socket.io": "^2.3.0",
